<resources>
    <string name="app_name">Personal Assistant</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="first_fragment">first fragment</string>
    <string name="second_fragment">second fragment</string>
    <string name="third_fragment">third fragment</string>
    <string name="done">Done</string>
    <string name="enter_amount">Enter amount</string>
    <string name="edit_total_amount">Edit Total Amount</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="setting">SETTING</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="write_your_notes">Empty notes</string>
    <string name="nothing_found">Nothing found</string>
    <string name="Enter_title">Enter Title</string>
    <string name="Add">ADD</string>
    <string name="Type_something">Type something</string>
    <string name="personal_assistant">Personal Assistant</string>
    <string name="create_fragment">create_fragment</string>
    <string name="Enter__sub_title">Enter sub title...</string>
    <string name="Notes">Notes</string>
    <string name="add_income">Add Income</string>
    <string name="add_income_img">Income Addition</string>
    <string name="add_expense">Add Expense</string>
    <string name="transaction">Transfer</string>
    <string name="history">History</string>
    <string name="income">Income:</string>
    <string name="expenses">Expenses:</string>
    <string name="balance">Balance:</string>
    <string name="enter_some_note">Enter some note</string>
    <string name="category">Category</string>
    <string name="payment_method">Payment method</string>
    <string name="amount">Amount</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="_done">Done</string>
    <string name="income_">Income</string>
    <string name="expense_">Expense</string>
    <string name="_expense">Expense</string>
    <string name="other_expense">Other Expense</string>
    <string name="cash">Cash</string>
    <string name="amount_">Amount:</string>
    <string name="ctaegory_">Category:</string>
    <string name="method">Method:</string>
    <string name="others">Others</string>
    <string name="amount__">Amount:</string>
    <string name="High">HIGH</string>
    <string name="Medium">MEDIUM</string>
    <string name="Low">LOW</string>
    <string name="priority">PRIORITY</string>

</resources>